# cpp

./: .gitignore  .vimrc  DataStructures.cpp  parsing.cpp
DesignPatterns/: CMakeLists.txt  MVC.cpp  abstract_factory.cpp  adapter.cpp  bridge.cpp  builder.cpp  chain.cpp  command.cpp  composite.cpp  decorator.cpp  facade.cpp  factory.cpp  filter.cpp  flyweight.cpp  interpreter.cpp  iterator.cpp  mediator.cpp  memento.cpp  null_object.cpp  observer.cpp  prototype.cpp  proxy.cpp  singletone.cpp  state.cpp  strategy.cpp  template.cpp  visitor.cpp
Expression/: Expression.cpp  Expression.h  Makefile  RPN.cpp  RPN.h  Scanner.cpp  main.cpp  test.cpp
Expression/src/: Expression.cpp  Expression.h  RPN.cpp  Scanner.cpp  Scanner.h
Expression/test/: input10k.txt  normal10k.txt  test.cpp
Matrix/: 3x3.m  Makefile  dis  dis2  main.cpp  test2A.m  test2B.m
Matrix/include/: Matrix.h
ProxyServer/: CMakeLists.txt  Proxy.h  ProxyServer.h  Scanner.h  Socket.cpp  echo_server  main.cpp  proxy
ProxyServer/lib/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  Client.h  Proxy.h  Selector.h  Server.h  Socket.cpp  Socket.h
ProxyServer/programs/: CMakeLists.txt  proxy.cpp
ProxyServer/test/: CMakeLists.txt  server.cpp
accounting/: accounting.cbp  accounting.depend  accounting.layout  main.cpp
algo/: BinarySearch.cpp  MatrixRotate.cpp  OperatorNew.cpp  arrays.dis  arrays.h  btree.cpp  getExtremeAnalysis.cpp  main.cpp  maxSubArray.h  traverse.cpp
algo/Graph/Skiena/data/: example2.txt
algo/Graph/Skiena/src/: graph.h
algo/Graph/Skiena/test/: bfs.c  dfs.c  path.c  queue_test.c
algo/graph/: CMakeLists.txt  example5.8.txt
algo/graph/data/: example5.14.txt
algo/graph/src/: CMakeLists.txt  graph.c  graph.h  queue.c  queue.h
algo/graph/test/: CMakeLists.txt  bfs.c  io.c  twocolor.c
analysis/: OperatorNew.cpp  getExtremeAnalysis.cpp  thread.cpp
arrays/: arrays.cpp  arrays.h  build.sh  coverage.cpp  fixnames.sh  main.cpp
emulator/: CMakeLists.txt
emulator/data/: fib.prog  movri.prog  output.txt
emulator/lib/: CMakeLists.txt  Commands.h  Definitions.h  Emulator.cpp  Emulator.h  Memory.h  Parser.cpp  Parser.h  Registers.cpp  Registers.h  Token.cpp  Token.h  Translate.cpp  Translate.h
emulator/programs/: CMakeLists.txt  assembler.cpp  fib.cpp
emulator/test/: CMakeLists.txt  MovRM.cpp  MovRRm.cpp
etc/: Processor.cpp  a.out  doub.encoded  jl.txt  reduce.c  sum.cpp  write.cpp
numbers/: main.cpp
parsing/: TEMap.h  Token.h  main.cpp  parsing.cpp  test.config  testConfig.cpp
sdl_game/: game.config  main.cpp
sdl_game/assets/: collisionmap.txt  lvl1.txt  map.map
sdl_game/include/: Game.h  Map.h  Vector2D.h
sdl_game/include/ECS/: Collider.h  Components.h  ECS.h  KeyboardController.h  PositionComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
sdl_game/src/: Collision.cpp  Collision.h  Components.cpp  Config.h  Game.cpp  Game.h  GameObject.cpp  Map.cpp  PolyIndex.h  RenderingUnit.h  TEMap.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h
sdl_game/src/ECS/: Animation.h  CameraController.h  Components.h  ECS.cpp  ECS.h  KeyboardController.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
sdl_game/test/: ECStest.cpp  testPoly.cpp
sdl_game/utils/: EventsScanner.cpp
shuffle/: Makefile  main.cpp
snake/: snake.cpp
sort/: Perfomance analysis.xlsx  main.cpp
stl_game/include/: Components.h  Game.h  GameObject.h  Map.h  TextureManager.h
stl_game/include/ECS/: SpriteComponent.h
stl_game/src/: Map.cpp
vmachine/: CMakeLists.txt  Commands.h  Definitions.h  Emulator.h  Memory.h  Processor.cpp  Registers.h  Translate.h  sort.asm
vmachine/lib/: Emulator.h
